--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,13 @@
     android:background="@drawable/bire"
     android:orientation="vertical">
 
+    <ImageView
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:layout_center_horizontal="true"
+        android:layout_gravity="center"
+        android:src="@drawable/vd" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -33,12 +40,7 @@
         android:orientation="horizontal"
         android:layout_marginTop="5dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="first Name:"
-            android:textSize="20dp" />
+
 
         <EditText
             android:id="@+id/firstName"
@@ -46,62 +48,29 @@
             android:layout_height="40dp"
             android:layout_marginLeft="3dp"
             android:background="#5676"
-            android:hint="Enter first name.."
-            android:textSize="20dp"
+            android:hint="Enter Name"
+            android:textSize="24dp"
             tools:ignore="TouchTargetSizeCheck" />
 
     </LinearLayout>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="5dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="Last Name:"
-            android:textSize="20dp" />
-
-        <EditText
-            android:id="@+id/lastName"
-            android:layout_width="300dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="3dp"
-            android:background="#5676"
-            android:hint="Enter lastname"
-            android:textSize="20dp"
-            tools:ignore="TouchTargetSizeCheck" />
-
-    </LinearLayout>
-    <TextView
-        android:id="@+id/userAlert"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textColor="#B71C1C"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="5dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Registration number"
-            android:textSize="20dp"
-            android:layout_marginLeft="5dp" />
 
         <EditText
             android:id="@+id/reg"
             android:layout_width="300dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="13dp"
+
             android:background="#5676"
-            android:hint="ENTER Reg number"
+            android:hint="Enter password "
             android:inputType="textPassword"
-            android:textSize="20dp"
+            android:textSize="24dp"
             tools:ignore="TouchTargetSizeCheck" />
     </LinearLayout>
     <LinearLayout
@@ -109,22 +78,17 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="5dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Contact:"
-            android:textSize="20dp"
-            android:layout_marginLeft="5dp" />
+
 
         <EditText
             android:id="@+id/userContact"
             android:layout_width="300dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="32dp"
+
             android:background="#5676"
             android:hint="Enter Contact No.."
             android:inputType="number"
-            android:textSize="20dp"
+            android:textSize="24dp"
             tools:ignore="TouchTargetSizeCheck" />
 
     </LinearLayout>
@@ -133,21 +97,16 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="5dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Email id:"
-            android:textSize="20dp"
-            android:layout_marginLeft="5dp" />
+
 
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
+
             android:background="#5676"
             android:hint="Enter email id"
-            android:textSize="20dp"
+            android:textSize="25dp"
             tools:ignore="TouchTargetSizeCheck" />
 
 
@@ -191,19 +150,14 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="5dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Age:"
-            android:textSize="20dp"
-            android:layout_marginLeft="5dp" />
+
 
         <EditText
             android:id="@+id/age"
             android:layout_width="wrap_content"
 
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
+
             android:background="#5676"
             android:hint="Enter your age"
             android:inputType="number"
