--- a/app/src/main/res/layout/activity_administrator_task.xml
+++ b/app/src/main/res/layout/activity_administrator_task.xml
@@ -1,9 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".administratorTask">
+    android:layout_marginVertical="16dp"
+    android:layout_marginHorizontal="32dp"
+    tools:context=".MainActivity">
+    <ImageView
+        android:id="@+id/login_icon"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginVertical="32dp"
+        android:src="@drawable/adminTask" />
+    <LinearLayout
+        android:id="@+id/hello_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/login_icon"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Make Legal Changes !"
+            android:textStyle="bold"
+            android:textSize="32sp"
+            android:textColor="@color/black"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/form_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/hello_text"
+        android:layout_marginVertical="32dp"
+        android:orientation="vertical">
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/add_candidate_button"
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:text="Add Candidate"
+            android:layout_marginTop="12dp"
+            android:paddingVertical="12dp"
+            android:textSize="16sp"/>
+        <ProgressBar
+            android:layout_width="24dp"
+            android:layout_height="64dp"
+            android:id="@+id/addCandidate_progressBar"
+            android:layout_gravity="center"
+            android:layout_marginTop="12dp"
+            android:visibility="gone"/>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/update_delete_candidate_button"
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:text="Update/Delete Candidate"
+            android:layout_marginTop="12dp"
+            android:paddingVertical="12dp"
+            android:textSize="16sp"/>
+        <ProgressBar
+            android:layout_width="24dp"
+            android:layout_height="64dp"
+            android:id="@+id/voters_progressBar"
+            android:layout_gravity="center"
+            android:layout_marginTop="12dp"
+            android:visibility="gone"/>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/voters_button"
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:text="Voters"
+            android:layout_marginTop="12dp"
+            android:paddingVertical="12dp"
+            android:textSize="16sp"/>
+        <ProgressBar
+            android:layout_width="24dp"
+            android:layout_height="64dp"
+            android:id="@+id/Results_progressBar"
+            android:layout_gravity="center"
+            android:layout_marginTop="12dp"
+            android:visibility="gone"/>
+        <com.google.android.material.button.MaterialButton
+        android:id="@+id/Results_button"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:text="Results"
+        android:layout_marginTop="12dp"
+        android:paddingVertical="12dp"
+        android:textSize="16sp"/>
+        <ProgressBar
+            android:layout_width="24dp"
+            android:layout_height="64dp"
+            android:id="@+id/UpdateDeleteCandidate_progressBar"
+            android:layout_gravity="center"
+            android:layout_marginTop="12dp"
+            android:visibility="gone"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/login_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/form_layout"
+        android:orientation="horizontal"
+        android:gravity="center">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:text="BACK "/>
+
+    </LinearLayout>
+</RelativeLayout>
