--- a/app/src/main/res/layout/activity_administrator_login.xml
+++ b/app/src/main/res/layout/activity_administrator_login.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     android:layout_marginVertical="16dp"
     android:layout_marginHorizontal="32dp"
-    tools:context=".loginActivity">
+    tools:context=".MainActivity">
     <ImageView
         android:id="@+id/login_icon"
         android:layout_width="128dp"
         android:layout_height="128dp"
         android:layout_centerHorizontal="true"
         android:layout_marginVertical="32dp"
-        android:src="@drawable/loginicon" />
+        android:src="@drawable/adminicon" />
     <LinearLayout
         android:id="@+id/hello_text"
         android:layout_width="match_parent"
@@ -23,14 +23,14 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hellow"
+            android:text="Hellow Admin !"
             android:textStyle="bold"
             android:textSize="32sp"
             android:textColor="@color/black"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Welcome Back!"
+            android:text="Welcome Back"
             android:textStyle="bold"
             android:textSize="36sp"
             android:textColor="@color/black"/>
@@ -91,13 +91,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Don't have an Account? "/>
-        <TextView
-            android:id="@+id/create_account_text_veiw_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:text="Create Account"/>
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:text="Please enter your registered mail ID! "/>
 
     </LinearLayout>
 </RelativeLayout>
