--- a/app/src/main/res/layout/activity_administrator_task.xml
+++ b/app/src/main/res/layout/activity_administrator_task.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     android:layout_marginVertical="16dp"
     android:layout_marginHorizontal="32dp"
-    tools:context=".loginActivity">
+    tools:context=".MainActivity">
     <ImageView
         android:id="@+id/login_icon"
         android:layout_width="128dp"
         android:layout_height="128dp"
         android:layout_centerHorizontal="true"
         android:layout_marginVertical="32dp"
-        android:src="@drawable/loginicon" />
+        android:src="@drawable/adminTask" />
     <LinearLayout
         android:id="@+id/hello_text"
         android:layout_width="match_parent"
@@ -23,16 +23,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hellow"
+            android:text="Make Legal Changes !"
             android:textStyle="bold"
             android:textSize="32sp"
-            android:textColor="@color/black"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Welcome Back!"
-            android:textStyle="bold"
-            android:textSize="36sp"
             android:textColor="@color/black"/>
     </LinearLayout>
     <LinearLayout
@@ -42,40 +35,63 @@
         android:layout_below="@+id/hello_text"
         android:layout_marginVertical="32dp"
         android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/email_edit_text"
-            android:inputType="textEmailAddress"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Email ID"
-            android:background="@drawable/rounded_corner"
-            android:padding="16dp"
-            android:layout_marginTop="12dp"
-            android:textSize="20sp"/>
-        <EditText
-            android:id="@+id/password_edit_text"
-            android:inputType="textPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Password"
-            android:background="@drawable/rounded_corner"
-            android:padding="16dp"
-            android:layout_marginTop="12dp"
-            android:textSize="20sp"/>
-
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/login_button"
+            android:id="@+id/add_candidate_button"
             android:layout_width="match_parent"
             android:layout_height="64dp"
-            android:text="Login"
+            android:text="Add Candidate"
             android:layout_marginTop="12dp"
             android:paddingVertical="12dp"
             android:textSize="16sp"/>
         <ProgressBar
             android:layout_width="24dp"
             android:layout_height="64dp"
-            android:id="@+id/progreass_bar"
+            android:id="@+id/addCandidate_progressBar"
+            android:layout_gravity="center"
+            android:layout_marginTop="12dp"
+            android:visibility="gone"/>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/update_delete_candidate_button"
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:text="Update/Delete Candidate"
+            android:layout_marginTop="12dp"
+            android:paddingVertical="12dp"
+            android:textSize="16sp"/>
+        <ProgressBar
+            android:layout_width="24dp"
+            android:layout_height="64dp"
+            android:id="@+id/voters_progressBar"
+            android:layout_gravity="center"
+            android:layout_marginTop="12dp"
+            android:visibility="gone"/>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/voters_button"
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:text="Voters"
+            android:layout_marginTop="12dp"
+            android:paddingVertical="12dp"
+            android:textSize="16sp"/>
+        <ProgressBar
+            android:layout_width="24dp"
+            android:layout_height="64dp"
+            android:id="@+id/Results_progressBar"
+            android:layout_gravity="center"
+            android:layout_marginTop="12dp"
+            android:visibility="gone"/>
+        <com.google.android.material.button.MaterialButton
+        android:id="@+id/Results_button"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:text="Results"
+        android:layout_marginTop="12dp"
+        android:paddingVertical="12dp"
+        android:textSize="16sp"/>
+        <ProgressBar
+            android:layout_width="24dp"
+            android:layout_height="64dp"
+            android:id="@+id/UpdateDeleteCandidate_progressBar"
             android:layout_gravity="center"
             android:layout_marginTop="12dp"
             android:visibility="gone"/>
@@ -91,13 +107,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Don't have an Account? "/>
-        <TextView
-            android:id="@+id/create_account_text_veiw_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:text="Create Account"/>
+            android:textSize="20sp"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:text="BACK "/>
 
     </LinearLayout>
 </RelativeLayout>
